# onnxruntime

./: .gitmodules  packages.config
.config/: tsaoptions.json
.pipelines/: OneBranch.Nuget-WindowsAI-Pipeline.Official.yml  windowsai-steps.yaml  windowsai-steps.yml
.pipelines/nuget_config/x86/: packages.config
cmake/: CMakeLists.txt  onnxruntime.cmake  onnxruntime_graph.cmake  onnxruntime_mlas.cmake  onnxruntime_providers.cmake  onnxruntime_python.cmake  onnxruntime_unittests.cmake  onnxruntime_webassembly.cmake
js/web/: buildRun.py
onnxruntime/contrib_ops/cpu/: crop_and_resize.cc  grid_sample.cc
onnxruntime/contrib_ops/cuda/bert/: qlinear_cublaslt_helper.cc  qlinear_cublaslt_helper.h  qlinear_longformer_attention.cc  qlinear_longformer_attention.h  qlinear_longformer_attention_impl.cu  qlinear_longformer_attention_impl.h  qorder_common.h  qorder_common_impl.cu  qorder_common_impl.h  qoreder_common.cc
onnxruntime/core/framework/: kernel_def_builder.cc  kernel_registry.cc  sequential_executor.cc  session_state_flatbuffers_utils.cc  session_state_flatbuffers_utils.h
onnxruntime/core/graph/: graph.cc  graph_flatbuffers_utils.cc
onnxruntime/core/graph/contrib_ops/: contrib_defs.cc  quantization_defs.cc
onnxruntime/core/optimizer/: utils.cc
onnxruntime/core/optimizer/transpose_optimizer/: api.h  api_impl.cc
onnxruntime/core/providers/cpu/: cpu_execution_provider.cc  cpu_provider_shared.cc
onnxruntime/core/providers/cpu/controlflow/: scan_9.cc
onnxruntime/core/providers/cpu/math/: element_wise_ops.cc
onnxruntime/core/providers/cpu/tensor/: gather_nd.cc
onnxruntime/core/providers/cuda/: cuda_execution_provider.cc
onnxruntime/core/providers/cuda/controlflow/: scan.cc
onnxruntime/core/providers/cuda/tensor/: gather_nd.cc  slice.cc
onnxruntime/core/providers/shared_library/: provider_api.h  provider_bridge_provider.cc
onnxruntime/core/session/: environment.cc  inference_session.cc
onnxruntime/core/xnnpack/: conv.cc  conv.h  xnnpack_kernels.cc
onnxruntime/core/xnnpack/schema/: CMakeLists.txt  xnnpack_onnx_defs.cc  xnnpack_onnx_defs.h
onnxruntime/core/xnnpack/schema/tests/: main.cc
onnxruntime/test/contrib_ops/: qordered_op_test.cc
onnxruntime/test/framework/: ort_model_only_test.cc
onnxruntime/test/perftest/: ort_test_session.cc
onnxruntime/test/python/: onnxruntime_test_python.py
onnxruntime/test/xnnpack/: input.c  main.cpp
onnxruntime/tool/: layout_transformer.cc
onnxruntime/wasm/: api.cc
orttraining/orttraining/lazy_tensor/: accelerator.cpp  accelerator.h  bridge.cpp  bridge.h  debug.cpp  debug.h  flags.cpp  flags.h  register.cpp  utils.cpp  utils.h
orttraining/orttraining/python/: orttraining_python_module.cc
orttraining/orttraining/python/training/optim/: adam.py  sample_test.py
orttraining/orttraining/python/training/ortmodule/: _custom_gradient_registry.py  _custom_op_symbolic_registry.py
orttraining/orttraining/test/python/: orttraining_test_ortmodule_api.py
orttraining/orttraining/training_ops/cpu/aten_ops/: aten_op.cc
orttraining/orttraining/training_ops/cuda/: cuda_training_kernels.cc
tools/ci_build/: build.py
tools/ci_build/github/azure-pipelines/: orttraining-pai-ci-pipeline.yml  win-ci-pipeline.yml
tools/ci_build/github/azure-pipelines/templates/: windowsai-nuget-build.yml
tools/ci_build/github/pai/: pai_get_thread.sh
tools/python/: ort_mobile_model_helpers.py
tools/python/util/: check_onnx_model_mobile_usability.py  convert_onnx_models_to_ort.py  make_dynamic_shape_fixed.py  onnx_model_utils.py  optimize_onnx_model.py  pytorch_export_helpers.py  update_onnx_opset.py
tools/python/util/mobile_helpers/: check_model_can_use_ort_mobile_pkg.py  usability_checker.py
tools/python/util/mobile_helpers/test/: test_check_model_can_use_ort_mobile_pkg.py  test_usability_checker.py
tools/python/util/qdq_helpers/: optimize_qdq_model.py  qdq_model_utils.py
tools/python/util/qdq_helpers/test/: test_qdq_model_utils.py
tools/python/util/test/: test_onnx_model_utils.py  test_pytorch_export_helpers.py
